--- a/src/assets/localization/cn.json
+++ b/src/assets/localization/cn.json
@@ -7,5 +7,8 @@
     "home-travel-bag": "旅游出行",
     "home-shopping-cart": "娱乐购物",
     "home-gold": "赢樂投",
-    "home-recruit": "人才招聘"
+    "home-recruit": "人才招聘",
+    "header-lang-menu-cn": "中文",
+    "header-lang-menu-en": "英文",
+    "header-lang-menu-ko": "韩文"
 }
