--- a/src/assets/localization/cn.json
+++ b/src/assets/localization/cn.json
@@ -16,5 +16,27 @@
     "footer-contact-personnel": "人事",
     "footer-contact-vip": "贵宾",
     "footer-qr-register": "扫码注册",
-    "footer-copyright": "© 2022 盈樂贵宾会  版權所有"
+    "footer-copyright": "© 2022 盈樂贵宾会  版權所有",
+
+    "home-course-title-01-time": "2021年09月",
+    "home-course-title-01-content1": "发展雏形",
+    "home-course-title-01-content2": " 计划开设贵宾厅",
+    "home-course-title-02-time": "2021年10月",
+    "home-course-title-02-content1": "正式确认成立",
+    "home-course-title-02-content2": " 盈樂贵宾厅",
+    "home-course-title-03-time": "2021年11月",
+    "home-course-title-03-content1": "新濠天地",
+    "home-course-title-03-content2": "盈樂贵宾厅第一家成立",
+    "home-course-title-04-time": "2022年03月",
+    "home-course-title-04-content1": "冈田会所",
+    "home-course-title-04-content2": "盈樂贵宾厅第二家成立",
+    "home-course-title-05-time": "2022年05月",
+    "home-course-title-05-content1": "克拉克HANN",
+    "home-course-title-05-content2": "盈樂贵宾厅第三家成立",
+    "home-course-title-06-time": "2022年07月-08月",
+    "home-course-title-06-content1": "云顶世界",
+    "home-course-title-06-content2": "盈樂贵宾厅即将成立",
+
+    "home-course-title-07-content1": "不忘初心",
+    "home-course-title-07-content2": "砥砺前行"
 }
