--- a/src/assets/localization/cn.json
+++ b/src/assets/localization/cn.json
@@ -36,7 +36,8 @@
     "home-course-title-06-time": "2022年07月-08月",
     "home-course-title-06-content1": "云顶世界",
     "home-course-title-06-content2": "盈樂贵宾厅即将成立",
-
     "home-course-title-07-content1": "不忘初心",
-    "home-course-title-07-content2": "砥砺前行"
+    "home-course-title-07-content2": "砥砺前行",
+
+    "home-activity-title": "盈樂活动"
 }
