最新动态布局

--- a/src/assets/localization/cn.json
+++ b/src/assets/localization/cn.json
@@ -39,5 +39,7 @@
     "home-course-title-07-content1": "不忘初心",
     "home-course-title-07-content2": "砥砺前行",
 
-    "home-activity-title": "盈樂活动"
+    "home-activity-title": "盈樂活动",
+    "home-dynamic-title": "最新动态",
+    "home-dynamic-more": "更多"
 }
