--- a/src/assets/localization/cn.json
+++ b/src/assets/localization/cn.json
@@ -1,4 +1,6 @@
 {
+    "common-not-found": "暂无此页面",
+
     "home-page": "首页",
     "home-dynamic": "最新动态",
     "home-supreme": "尊尚服务",
@@ -41,5 +43,7 @@
 
     "home-activity-title": "盈樂活动",
     "home-dynamic-title": "最新动态",
-    "home-dynamic-more": "更多"
+    "home-dynamic-more": "更多",
+
+    "top-banner-title-latest-news": "最新动态"
 }
