--- a/src/assets/localization/cn.json
+++ b/src/assets/localization/cn.json
@@ -45,5 +45,6 @@
     "home-dynamic-title": "最新动态",
     "home-dynamic-more": "更多",
 
-    "top-banner-title-latest-news": "最新动态"
+    "top-banner-title-latest-news": "最新动态",
+    "top-banner-title-respected": "尊尚服务"
 }
