--- a/src/assets/localization/cn.json
+++ b/src/assets/localization/cn.json
@@ -46,5 +46,6 @@
     "home-dynamic-more": "更多",
 
     "top-banner-title-latest-news": "最新动态",
-    "top-banner-title-respected": "尊尚服务"
+    "top-banner-title-respected": "尊尚服务",
+    "top-banner-title-member": "会员礼遇"
 }
