--- a/src/assets/localization/cn.json
+++ b/src/assets/localization/cn.json
@@ -47,5 +47,6 @@
 
     "top-banner-title-latest-news": "最新动态",
     "top-banner-title-respected": "尊尚服务",
-    "top-banner-title-member": "会员礼遇"
+    "top-banner-title-member": "会员礼遇",
+    "top-banner-title-hotel-catering": "酒店餐饮"
 }
