--- a/src/assets/localization/cn.json
+++ b/src/assets/localization/cn.json
@@ -48,5 +48,6 @@
     "top-banner-title-latest-news": "最新动态",
     "top-banner-title-respected": "尊尚服务",
     "top-banner-title-member": "会员礼遇",
-    "top-banner-title-hotel-catering": "酒店餐饮"
+    "top-banner-title-hotel-catering": "酒店餐饮",
+    "top-banner-title-travel": "旅游出行"
 }
