--- a/src/assets/localization/cn.json
+++ b/src/assets/localization/cn.json
@@ -49,5 +49,6 @@
     "top-banner-title-respected": "尊尚服务",
     "top-banner-title-member": "会员礼遇",
     "top-banner-title-hotel-catering": "酒店餐饮",
-    "top-banner-title-travel": "旅游出行"
+    "top-banner-title-travel": "旅游出行",
+    "top-banner-title-shopping": "娱乐购物"
 }
