人才招聘，100vh问题

--- a/src/assets/localization/cn.json
+++ b/src/assets/localization/cn.json
@@ -50,5 +50,12 @@
     "top-banner-title-member": "会员礼遇",
     "top-banner-title-hotel-catering": "酒店餐饮",
     "top-banner-title-travel": "旅游出行",
-    "top-banner-title-shopping": "娱乐购物"
+    "top-banner-title-shopping": "娱乐购物",
+    "top-banner-title-recruitment": "人才招聘",
+
+    "recruitment-publicity-title-01": "盈樂是广阔的平台，是坚强的后盾在这里你我皆可梦想成真",
+    "recruitment-publicity-title-02": "凝聚我们的力量，创造盈樂的辉煌做全行业的榜样",
+    "recruitment-publicity-title-03": "以专业且卓越的服务吸引客户以优秀的口碑和商誉赢得市场",
+    "recruitment-position-title": "虚位以待",
+    "recruitment-position-detail-title": "详情>"
 }
