--- a/src/assets/localization/cn.json
+++ b/src/assets/localization/cn.json
@@ -57,5 +57,9 @@
     "recruitment-publicity-title-02": "凝聚我们的力量，创造盈樂的辉煌做全行业的榜样",
     "recruitment-publicity-title-03": "以专业且卓越的服务吸引客户以优秀的口碑和商誉赢得市场",
     "recruitment-position-title": "虚位以待",
-    "recruitment-position-detail-title": "详情>"
+    "recruitment-position-detail-title": "详情>",
+
+    "detail-title-hotel-catering": "酒店餐饮",
+    "detail-title-travel": "旅游出行",
+    "detail-title-shopping": "娱乐购物"
 }
