--- a/src/assets/localization/cn.json
+++ b/src/assets/localization/cn.json
@@ -16,6 +16,12 @@
     "header-lang-menu-ko": "韩文",
 
     "footer-contact-personnel": "人事",
+    "footer-contact-phone": "电话",
+    "footer-contact-email": "邮箱",
+    "footer-contact-whatsapp": "WhatsApp",
+    "footer-contact-telegram": "Telegram",
+    "footer-contact-accountant": "账房",
+    "footer-contact-market": "市场",
     "footer-contact-vip": "贵宾",
     "footer-qr-register": "扫码注册",
     "footer-copyright": "© 2022 盈樂贵宾会  版權所有",
