--- a/src/assets/localization/en.json
+++ b/src/assets/localization/en.json
@@ -1,61 +1,71 @@
 {
-    "common-not-found": "暂无此页面",
+    "common-not-found": " Page Not Available",
 
-    "home-page": "首页",
-    "home-dynamic": "最新动态",
-    "home-supreme": "尊尚服务",
-    "home-member": "会员福利",
-    "home-coffee": "酒店餐饮",
-    "home-travel-bag": "旅游出行",
-    "home-shopping-cart": "娱乐购物",
-    "home-gold": "赢樂投",
-    "home-recruit": "人才招聘",
+    "home-page": "Homepage",
+    "home-dynamic": "News Update",
+    "home-supreme": "Privilege Service",
+    "home-member": "Membership Benefits",
+    "home-coffee": "Hotel Dining",
+    "home-travel-bag": "Travel and Vacation",
+    "home-shopping-cart": "Entertainment and Shopping",
+    "home-gold": "OKBET",
+    "home-recruit": "Career Opportunities",
 
-    "header-lang-menu-cn": "中文",
-    "header-lang-menu-en": "英文",
-    "header-lang-menu-ko": "韩文",
+    "header-lang-menu-cn": "Chinese",
+    "header-lang-menu-en": "English",
+    "header-lang-menu-ko": "Korean",
 
-    "footer-contact-personnel": "人事",
-    "footer-contact-vip": "贵宾",
-    "footer-qr-register": "扫码注册",
-    "footer-copyright": "© 2022 盈樂贵宾会  版權所有",
+    "footer-contact-personnel": "Human Resources",
+    "footer-contact-phone": "Telephone",
+    "footer-contact-email": "Email",
+    "footer-contact-whatsapp": "WhatsApp",
+    "footer-contact-telegram": "Telegram",
+    "footer-contact-accountant": "accountant",
+    "footer-contact-market": "market",
+    "footer-contact-vip": "Guests",
+    "footer-qr-register": "Scan to Register",
+    "footer-copyright": "© 2022 OKBET VIP Club All Rights Reserved ",
 
-    "home-course-title-01-time": "2021年09月",
-    "home-course-title-01-content1": "发展雏形",
-    "home-course-title-01-content2": " 计划开设贵宾厅",
-    "home-course-title-02-time": "2021年10月",
-    "home-course-title-02-content1": "正式确认成立",
-    "home-course-title-02-content2": " 盈樂贵宾厅",
-    "home-course-title-03-time": "2021年11月",
-    "home-course-title-03-content1": "新濠天地",
-    "home-course-title-03-content2": "盈樂贵宾厅第一家成立",
-    "home-course-title-04-time": "2022年03月",
-    "home-course-title-04-content1": "冈田会所",
-    "home-course-title-04-content2": "盈樂贵宾厅第二家成立",
-    "home-course-title-05-time": "2022年05月",
-    "home-course-title-05-content1": "克拉克HANN",
-    "home-course-title-05-content2": "盈樂贵宾厅第三家成立",
-    "home-course-title-06-time": "2022年07月-08月",
-    "home-course-title-06-content1": "云顶世界",
-    "home-course-title-06-content2": "盈樂贵宾厅即将成立",
-    "home-course-title-07-content1": "不忘初心",
-    "home-course-title-07-content2": "砥砺前行",
+    "home-course-title-01-time": "2021 September",
+    "home-course-title-01-content1": "Prototype",
+    "home-course-title-01-content2": "OKBET VIP Junket in planning",
+    "home-course-title-02-time": "2021-October",
+    "home-course-title-02-content1": "Establishment",
+    "home-course-title-02-content2": "OKBET VIP Club",
+    "home-course-title-03-time": "2021 November",
+    "home-course-title-03-content1": "City of Dreams",
+    "home-course-title-03-content2": "First OKBET VIP Junket",
+    "home-course-title-04-time": "2022 March",
+    "home-course-title-04-content1": "Okada Manila",
+    "home-course-title-04-content2": "Second OKBET VIP Junket",
+    "home-course-title-05-time": "2022 May",
+    "home-course-title-05-content1": "HANN Casino Resort",
+    "home-course-title-05-content2": "Third OKBET VIP Junket",
+    "home-course-title-06-time": "2022 July to August",
+    "home-course-title-06-content1": "Resorts World Manila",
+    "home-course-title-06-content2": "OKBET VIP Junket is Coming Soon",
+    "home-course-title-07-content1": "Staying True to Our Founding Mission",
+    "home-course-title-07-content2": "and Forging Ahead",
 
-    "home-activity-title": "盈樂活动",
-    "home-dynamic-title": "最新动态",
-    "home-dynamic-more": "更多",
+    "home-activity-title": "OKBET Events",
+    "home-dynamic-title": "News Update",
+    "home-dynamic-more": "More...",
 
-    "top-banner-title-latest-news": "最新动态",
-    "top-banner-title-respected": "尊尚服务",
-    "top-banner-title-member": "会员礼遇",
-    "top-banner-title-hotel-catering": "酒店餐饮",
-    "top-banner-title-travel": "旅游出行",
-    "top-banner-title-shopping": "娱乐购物",
-    "top-banner-title-recruitment": "人才招聘",
+    "top-banner-title-latest-news": "News Update",
+    "top-banner-title-respected": "Privilege Service",
+    "top-banner-title-member": "Membership Rewards",
+    "top-banner-title-hotel-catering": "Hotel Dining",
+    "top-banner-title-travel": "Travel and Vacation",
+    "top-banner-title-shopping": "Entertainment and Shopping",
+    "top-banner-title-recruitment": "Career Opportunities",
 
-    "recruitment-publicity-title-01": "盈樂是广阔的平台，是坚强的后盾在这里你我皆可梦想成真",
-    "recruitment-publicity-title-02": "凝聚我们的力量，创造盈樂的辉煌做全行业的榜样",
-    "recruitment-publicity-title-03": "以专业且卓越的服务吸引客户以优秀的口碑和商誉赢得市场",
-    "recruitment-position-title": "虚位以待",
-    "recruitment-position-detail-title": "详情>"
+    "recruitment-publicity-title-01": "OKBET VIP Club is a broad platform with back on the force where make our dreams come true",
+    "recruitment-publicity-title-02": "Strengthen team cohesion for OKBET corporate development sucessful achievement to be the industry role model",
+    "recruitment-publicity-title-03": "Customers are attracted with our outstandin and professiona services, meanwhile excellent corporate reputation and goodwill stands out in the market",
+    "recruitment-position-title": "hotel-dining",
+    "recruitment-position-detail-title": "more…>",
+
+    "detail-title-hotel-catering": "Hotel Dining",
+    "detail-title-travel": "Travel and Vacation",
+    "detail-title-shopping": "Entertainment and Shopping"
 }
