--- a/src/assets/localization/ko.json
+++ b/src/assets/localization/ko.json
@@ -1,61 +1,71 @@
 {
-    "common-not-found": "暂无此页面",
+    "common-not-found": "해당 페이지가 없습니다",
 
-    "home-page": "首页",
-    "home-dynamic": "最新动态",
-    "home-supreme": "尊尚服务",
-    "home-member": "会员福利",
-    "home-coffee": "酒店餐饮",
-    "home-travel-bag": "旅游出行",
-    "home-shopping-cart": "娱乐购物",
-    "home-gold": "赢樂投",
-    "home-recruit": "人才招聘",
+    "home-page": "첫페이지",
+    "home-dynamic": "최근소식",
+    "home-supreme": "프레스티지 서비스",
+    "home-member": "회원혜택",
+    "home-coffee": "호텔 다이닝",
+    "home-travel-bag": "여행",
+    "home-shopping-cart": "엔터테인먼트 쇼핑",
+    "home-gold": "online bet",
+    "home-recruit": " 인재채용",
 
-    "header-lang-menu-cn": "中文",
-    "header-lang-menu-en": "英文",
-    "header-lang-menu-ko": "韩文",
+    "header-lang-menu-cn": "중문",
+    "header-lang-menu-en": "영문",
+    "header-lang-menu-ko": "한국어",
 
-    "footer-contact-personnel": "人事",
-    "footer-contact-vip": "贵宾",
-    "footer-qr-register": "扫码注册",
-    "footer-copyright": "© 2022 盈樂贵宾会  版權所有",
+    "footer-contact-personnel": "인사부",
+    "footer-contact-phone": "전화",
+    "footer-contact-email": "우편",
+    "footer-contact-whatsapp": "WhatsApp",
+    "footer-contact-telegram": "Telegram",
+    "footer-contact-accountant": "회계",
+    "footer-contact-market": "시장",
+    "footer-contact-vip": "VIP",
+    "footer-qr-register": "코드스캔 등록",
+    "footer-copyright": "© 2022 오케이벳 귀빈청 판권소유",
 
-    "home-course-title-01-time": "2021年09月",
-    "home-course-title-01-content1": "发展雏形",
-    "home-course-title-01-content2": " 计划开设贵宾厅",
-    "home-course-title-02-time": "2021年10月",
-    "home-course-title-02-content1": "正式确认成立",
-    "home-course-title-02-content2": " 盈樂贵宾厅",
-    "home-course-title-03-time": "2021年11月",
-    "home-course-title-03-content1": "新濠天地",
-    "home-course-title-03-content2": "盈樂贵宾厅第一家成立",
-    "home-course-title-04-time": "2022年03月",
-    "home-course-title-04-content1": "冈田会所",
-    "home-course-title-04-content2": "盈樂贵宾厅第二家成立",
-    "home-course-title-05-time": "2022年05月",
-    "home-course-title-05-content1": "克拉克HANN",
-    "home-course-title-05-content2": "盈樂贵宾厅第三家成立",
-    "home-course-title-06-time": "2022年07月-08月",
-    "home-course-title-06-content1": "云顶世界",
-    "home-course-title-06-content2": "盈樂贵宾厅即将成立",
-    "home-course-title-07-content1": "不忘初心",
-    "home-course-title-07-content2": "砥砺前行",
+    "home-course-title-01-time": "2021년 09월",
+    "home-course-title-01-content1": "개발 추세",
+    "home-course-title-01-content2": "VIP룸 오픈예정",
+    "home-course-title-02-time": "2021년 10월",
+    "home-course-title-02-content1": "정식설립 확인",
+    "home-course-title-02-content2": "오케이벳 귀빈청",
+    "home-course-title-03-time": "2021년 11월",
+    "home-course-title-03-content1": "시오디(COD)",
+    "home-course-title-03-content2": "오케이벳 첫번째 업장 오픈",
+    "home-course-title-04-time": "2022년03월",
+    "home-course-title-04-content1": "오카다 클럽",
+    "home-course-title-04-content2": "오케이벳 두번째 업장 오픈",
+    "home-course-title-05-time": "2022년 05월",
+    "home-course-title-05-content1": "클락 HANN",
+    "home-course-title-05-content2": "오케이벳 세번째 업장 오픈",
+    "home-course-title-06-time": "2022년 07월-08월",
+    "home-course-title-06-content1": "리조트월드",
+    "home-course-title-06-content2": " 오케이벳 오픈 준비",
+    "home-course-title-07-content1": "초심을 잊지 않아야 한다",
+    "home-course-title-07-content2": "앞으로 나아가다",
 
-    "home-activity-title": "盈樂活动",
-    "home-dynamic-title": "最新动态",
-    "home-dynamic-more": "更多",
+    "home-activity-title": "오케이벳 활동",
+    "home-dynamic-title": "최근 소식",
+    "home-dynamic-more": "더보기",
 
-    "top-banner-title-latest-news": "最新动态",
-    "top-banner-title-respected": "尊尚服务",
-    "top-banner-title-member": "会员礼遇",
-    "top-banner-title-hotel-catering": "酒店餐饮",
-    "top-banner-title-travel": "旅游出行",
-    "top-banner-title-shopping": "娱乐购物",
-    "top-banner-title-recruitment": "人才招聘",
+    "top-banner-title-latest-news": "최근소식",
+    "top-banner-title-respected": "프레스티지 서비스",
+    "top-banner-title-member": "회원혜택",
+    "top-banner-title-hotel-catering": "호텔 다이닝",
+    "top-banner-title-travel": "여행",
+    "top-banner-title-shopping": "엔터테인먼트 쇼핑",
+    "top-banner-title-recruitment": "인재채용",
 
-    "recruitment-publicity-title-01": "盈樂是广阔的平台，是坚强的后盾在这里你我皆可梦想成真",
-    "recruitment-publicity-title-02": "凝聚我们的力量，创造盈樂的辉煌做全行业的榜样",
-    "recruitment-publicity-title-03": "以专业且卓越的服务吸引客户以优秀的口碑和商誉赢得市场",
-    "recruitment-position-title": "虚位以待",
-    "recruitment-position-detail-title": "详情>"
+    "recruitment-publicity-title-01": "오케이벳은 광범위한 플랫폼과 든든한 후원자 입니다. 여기에서 고객님과 저희가 함께 꿈을 이룰수 있습니다",
+    "recruitment-publicity-title-02": "다같이 힘을 모아",
+    "recruitment-publicity-title-03": "전문적이고 우수한 서비스로 고객유치, 우수한 평판과 신임으로 시장선점",
+    "recruitment-position-title": "대기중",
+    "recruitment-position-detail-title": "세부내용>",
+
+    "detail-title-hotel-catering": "호텔 다이닝",
+    "detail-title-travel": "여행",
+    "detail-title-shopping": "엔터테인먼트 쇼핑"
 }
