--- a/src/assets/localization/cn.json
+++ b/src/assets/localization/cn.json
@@ -67,5 +67,6 @@
 
     "detail-title-hotel-catering": "酒店餐饮",
     "detail-title-travel": "旅游出行",
-    "detail-title-shopping": "娱乐购物"
+    "detail-title-shopping": "娱乐购物",
+    "detail-title-recruitment": "人才招聘"
 }
