--- a/src/assets/localization/en.json
+++ b/src/assets/localization/en.json
@@ -67,5 +67,6 @@
 
     "detail-title-hotel-catering": "Hotel Dining",
     "detail-title-travel": "Travel and Vacation",
-    "detail-title-shopping": "Entertainment and Shopping"
+    "detail-title-shopping": "Entertainment and Shopping",
+    "detail-title-recruitment": "Career Opportunities"
 }
