--- a/src/assets/localization/ko.json
+++ b/src/assets/localization/ko.json
@@ -67,5 +67,6 @@
 
     "detail-title-hotel-catering": "호텔 다이닝",
     "detail-title-travel": "여행",
-    "detail-title-shopping": "엔터테인먼트 쇼핑"
+    "detail-title-shopping": "엔터테인먼트 쇼핑",
+    "detail-title-recruitment": "인재채용"
 }
