首页接口调整

--- a/src/assets/localization/en.json
+++ b/src/assets/localization/en.json
@@ -20,8 +20,8 @@
     "footer-contact-email": "Email",
     "footer-contact-whatsapp": "WhatsApp",
     "footer-contact-telegram": "Telegram",
-    "footer-contact-accountant": "accountant",
-    "footer-contact-market": "market",
+    "footer-contact-accountant": "Accountant",
+    "footer-contact-market": "Market",
     "footer-contact-vip": "Guests",
     "footer-qr-register": "Scan to Register",
     "footer-copyright": "© 2022 OKBET VIP Club All Rights Reserved ",
