--- a/src/assets/localization/cn.json
+++ b/src/assets/localization/cn.json
@@ -69,5 +69,10 @@
     "detail-title-hotel-catering": "酒店餐饮",
     "detail-title-travel": "旅游出行",
     "detail-title-shopping": "娱乐购物",
-    "detail-title-recruitment": "人才招聘"
+    "detail-title-recruitment": "人才招聘",
+
+    "detail-text-open-time": "营业时间",
+    "detail-text-hours": "小时",
+    "detail-text-address": "详细地址",
+    "detail-text-yacht-directory": "游艇目录"
 }
