娱乐购物详情

--- a/src/assets/localization/cn.json
+++ b/src/assets/localization/cn.json
@@ -74,5 +74,6 @@
     "detail-text-open-time": "营业时间",
     "detail-text-hours": "小时",
     "detail-text-address": "详细地址",
-    "detail-text-yacht-directory": "游艇目录"
+    "detail-text-yacht-directory": "游艇目录",
+    "detail-text-service-items": "服务项目"
 }
